# wagtail-site-template

./: .env-EXAMPLE  .gitignore  Dockerfile  Pipfile  README.md  cookiecutter.json  docker-compose.https.yml  docker-compose.proxy.yml  docker-compose.yml  gunicorn.conf.py
project_name/: settings.py  wsgi.py
website/blocks/: content_blocks.py
website/migrations/: 0002_initial_data.py
website/static/website/scss/: custom.scss
website/templates/coderedcms/pages/: base.html
{{ cookiecutter.project_slug }}/: .dockerignore  .env-EXAMPLE  .env-dev  .env-production  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.https.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
{{ cookiecutter.project_slug }}/website/: models.py
{{ cookiecutter.project_slug }}/website/blocks/: __init__.py  content_blocks.py
{{ cookiecutter.project_slug }}/website/migrations/: 0002_initial_data.py
{{ cookiecutter.project_slug }}/website/static/website/scss/: _variables.scss  custom.css
{{ cookiecutter.project_slug }}/website/templates/coderedcms/pages/: base.html
{{ cookiecutter.project_slug }}/website/templates/website/blocks/: content_only_block.html  div_block.html  section_block.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: _version.py  settings.py  test_settings.py  urls.py  wsgi.py
